<resources>
    <string name="app_name">Cauch</string>
    <string name="add_task">add task</string>
    <string name="add_tag">add tag</string>
    <string name="add_repating_task">add repating task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cauch 0.2.0-alpha</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Daily Schedule</string>
    <string name="menu_analytics">Analytics</string>
    <string name="menu_pomodoro">Pomodoro</string>
    <string name="menu_classroom">Google Classroom</string>
    <string name="menu_tags">Your Tags</string>
    <string name="menu_repeats">Repeating Tasks</string>
    <string name="channel_name">CauchNotifications</string>
    <string name="channel_description">Task Notifications from Cauch.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="_12_00_00">12:00:00</string>
    <string name="_01_01_01">01/01/01</string>
    <string name="description">Description</string>
</resources>