<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) Cyrus Singer - All Rights Reserved
Unauthorized copying of this file, via any medium is strictly prohibited
Proprietary and confidential
Written by Cyrus Singer <japaneserhino@gmail.com>, October 2020
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_tasks"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/ic_menu_analytics"
            android:title="@string/menu_analytics" />
        <item
            android:id="@+id/nav_classroom"
            android:icon="@drawable/ic_menu_classroom"
            android:title="@string/menu_classroom" />
    </group>
</menu>