<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.scheduleapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_analytics"
        android:name="com.example.scheduleapp.ui.analytics.AnalyticsFragment"
        android:label="@string/menu_analytics"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/nav_classroom"
        android:name="com.example.scheduleapp.ui.classroom.ClassroomFragment"
        android:label="@string/menu_classroom"
        tools:layout="@layout/fragment_slideshow" />

</navigation>